--- a/less/components/site-header.less
+++ b/less/components/site-header.less
@@ -75,6 +75,7 @@
 		padding-top: 20px;
 		.light-border-top();
 		border-top-color: darken(@brand-primary , 5%);
+		overflow: auto;
 	}
 	.search-bar {
 		.form-inline {
